<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">极致校长</string>
    <string name="welcome_text">www.ifanying.com</string>  
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="data_title">数据概览</string>
    <string name="industry_consult">行业资讯</string>
    <string name="my_chat_messages">我的消息</string>
    <string name="mail">信箱</string>
    <string name="appointment_tip">预约提醒</string>
    <string name="new_message_tip">新消息提醒</string>
    <string name="about_us">关于我们</string>
    <string name="set_rate">去评分</string>
    <string name="callback">反馈</string>
    

    <!-- 登录页面 -->
    <string name="phonenumber">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    
        <!-- 下拉刷新 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新...</string>
    <string name="pull_to_refresh_refreshing_label">正在加载...</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="contact_customer_service">如需使用请致电:400-101-6669</string>
    <string name="service_phone_number">400-101-6669</string>
    <string name="publish_bulletin">发布公告</string>
    <string name="publish">发布</string>
    <string name="history_bulletin">驾校公告</string>
    <string name="complain">投诉</string>
    <string name="complain_detail">投诉详情</string>
    <string name="coach">教练</string>
    <string name="student">学员</string>
    <string name="max_300_word">最多输入300字</string>
    <string name="input_bulletin_title">请输入公告标题最多15字(选填)</string>
    
    <!-- 左侧教练 -->
    <string name="title_search_hint">搜索</string>
    <string name="coach_title">我校教练</string>
    <string name="setting_title">设置</string>
     <!-- 左侧设置 -->
      <string name="setting_aboutus">关于我们</string>  
      <string name="setting_callback">反馈</string>  
      <string name="allow_protocol">许可服务协议</string>
      <string name="opinions_suggestions">请留下宝贵的意见和建议</string>
      <string name="no_network">网络开小差了</string>
      
      
      <!-- 评价 -->
      <string name="assess">评价</string>
      <string name="send">发送</string>
      <string name="press_speak">按住&#160;说话</string>
    <string name="unpress_end">松开&#160;结束</string>
    <string name="unpress_cancel">松开手指取消发送</string>
    <string name="take_picture">拍照</string>
     <string-array name="tab_names">
        <item>今天</item>
        <item>昨天</item>
        <item>本周</item>
        <item>本月</item>
        <item>本年</item>
    </string-array>
        <string name="exit_login">退出登入</string>
        <string name="search">搜索</string>
        <string name="enter_app">点击进入</string>
        <string name="coach_feedback">教练反馈</string>
</resources>


