<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_publish_bulletin_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <RadioGroup
        android:id="@+id/rg_publish_bulletin_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_publish_bulletin_coach"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:checked="true"
            android:button="@drawable/bottom_selector"
            android:text="@string/coach"
            android:textColor="#047a64"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rb_publish_bulletin_student"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginLeft="43dp"
            android:button="@drawable/bottom_selector"
            android:text="@string/student"
            android:textColor="#047a64"
            android:textSize="14sp"  />
    </RadioGroup>

    <EditText
        android:id="@+id/et_publish_bulletin_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_publish_bulletin_select"
        android:hint="@string/max_300_word"
        android:gravity="left|top"
        android:maxLength="300"
        android:textCursorDrawable="@drawable/text_cursor_drawable"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="#bfbfbf"
        android:background="@null"
        android:minLines="7" >

    </EditText>

</RelativeLayout>

