<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_rootview_rl"
    android:background="@drawable/login_bg" >

    <ImageView
        android:id="@+id/login_logo_iv"
        android:layout_width="@dimen/login_logo_width"
        android:layout_height="@dimen/login_logo_height"
        android:layout_marginLeft="@dimen/login_logo_marginleft"
        android:layout_marginTop="@dimen/login_logo_margintop"
        android:background="@drawable/app_logo"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/login_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/login_logo_iv"
        android:focusable="true" 
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_phone_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_user_height"
            android:layout_marginLeft="@dimen/login_user_marginleft"
            android:layout_marginTop="@dimen/login_user_margintop"
            android:background="@null"
            android:drawableLeft="@drawable/login_phone"
            android:drawablePadding="@dimen/login_user_marginleft"
            android:hint="@string/phonenumber"
            android:inputType="phone"
            android:maxLength="11"
            android:text="15652305651"
            android:singleLine="true"
            android:textColor="#d7d7d7"
            
            android:textColorHint="#d7d7d7" />

        <ImageView
            android:id="@+id/login_deivder_im"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/login_icon_Padding"
            android:background="#7f7f7f"
            android:textCursorDrawable="@drawable/text_cursor_drawable"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_user_height"
            android:layout_marginLeft="@dimen/login_user_marginleft"
            android:layout_marginTop="@dimen/login_pass_margintop"
            android:background="@null"
            android:text="123456"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:drawableLeft="@drawable/login_password"
            android:drawablePadding="@dimen/login_user_marginleft"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#d7d7d7"
            android:textColorHint="#d7d7d7" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/login_icon_Padding"
            android:background="#7f7f7f"
            android:contentDescription="@string/app_name" />

        <Button
            android:id="@+id/login_login_btn"
            style="@style/btn_style"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/login_but_margintop"
            android:contentDescription="@string/app_name"
            android:text="@string/login" />

        <TextView
            android:id="@+id/login_service_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:text="@string/contact_customer_service"
            android:textColor="#d7d7d7"
            android:clickable="true"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>