<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image_logo"
        android:layout_marginTop="72dp"
        android:layout_gravity="center_horizontal"/>
    
<EditText
            android:id="@+id/login_phone_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#22ffffff"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="114dp"
            android:drawableLeft="@drawable/icon_name"
            android:drawablePadding="1dp"
            android:hint="@string/phonenumber"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textColorHint="#C8CACD" />
<EditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="1dp"
            android:background="#22ffffff"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:drawableLeft="@drawable/icon_password"
            android:drawablePadding="1dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textColorHint="#C8CACD" />

<Button
            android:id="@+id/login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="40dp"
            android:background="#26CCC0"
            android:text="@string/login" 
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"/>

<TextView 
    android:id="@+id/login_service_phone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="116dp"
    android:textColor="#9A9DA6"
    android:textSize="14sp"
    android:layout_gravity="center_horizontal"
    android:text="没有账号？联系我们"/>
</LinearLayout>
